--- a/index.html
+++ b/index.html
@@ -3,9 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Workland Industrial & Factory</title>
+    <!--! BOOTSTRAP CSS-->
+    <link rel="stylesheet" href="/bootstrap/bootstrap.css">
+    <!--! !BOOTSTRAP CSS-->
+
+    <!--! STYLE css -->
+    <link rel="stylesheet" href="/CSS/style.css">
+    <!--! !STYLE css -->
 </head>
 <body>
+    <!--! SECTION HEADING -->
+    <section class="header-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="header-section__inner-container d-flex justify-content-center align-items-center">
+                        <div class="header-section__text-container">
+                            <div class="header-section__title-container">
+                                <h1>Welcome To Workland Factory</h1>
+                            </div>
+                            <div class="header-section__subtitle-container">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptate sapiente asperiores laborum consequatur natus impedit deleniti vitae placeat.</p>
+                            </div>
+                            <div class="header-section__button-container">
+                                <a href="#" class="button button-custom">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     
+
+    <!--! !SECTION HEADING -->
+    
+
+
+
+
+
+
+
+
+
+
+    <!-- !BOOTSTRAP JS -->
+    <script src="/js/bootstrap.js"></script>
+    <!-- ! !BOOTSTRAP JS -->
 </body>
 </html>
