--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                     <div class="header-section__inner-container d-flex justify-content-center align-items-center">
                         <div class="header-section__text-container">
                             <div class="header-section__title-container">
-                                <h1>Welcome To Workland Factory</h1>
+                                <h1>Welcome To <br>                                    Workland Factory</h1>
                             </div>
                             <div class="header-section__subtitle-container">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptate sapiente asperiores laborum consequatur natus impedit deleniti vitae placeat.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
                             </div>
                             <div class="header-section__button-container">
-                                <a href="#" class="button button-custom">Read More</a>
+                                <a href="#" class="button button--custom">Read More</a>
                             </div>
                         </div>
                     </div>
